--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -112,9 +112,9 @@
                 <td><b>Price:</b> {{x[1]}}$</td>
                 <td><b>Shipping:</b> {{x[2]}}$</td>
                  <td><div class="img-thumbnail"><img src={{x[4]}} height="120" width="120"></div></td>
-                <td><form method="post" action={{x[3]}}><p class="submit"><input type="submit" value="Buy" class="btn btn-primary" id={{x[0]}}></p></form></td>
-                <td><form method="post" action="http://dinero-web.heroku.com/favorites/delete/{{x[0]}}"><p class="submit"><input type="submit" value="Delete" class="btn btn-danger" id={{x[0]}} ></p></form></td>
-             	<td><form method="post" action="http://dinero-web.heroku.com/favorites"><p class="submit"><input type="submit" value="Like This" class="btn btn-default"></p></form></td
+                <td><form method="post" action={{x[3]}}><p class="submit"><input type="submit" value="Buy" class="btn btn-primary btn-block" id={{x[0]}}></p></form></td>
+                <td><form method="post" action="http://dinero-web.heroku.com/favorites/delete/{{x[0]}}"><p class="submit"><input type="submit" value="Delete" class="btn btn-danger btn-block" id={{x[0]}} ></p></form></td>
+             	<td><form method="post" action="http://dinero-web.heroku.com/favorites"><p class="submit"><input type="submit" value="Like This" class="btn btn-info btn-block"></p></form></td
                 </tr>
         {% endfor %}
        </tbody>
