--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -123,7 +123,7 @@
 <p><input class="form-control" type="password" name="add2" value="" placeholder="Password"></p>
 
      <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/dinero"><input type="submit" value="Sign-in " class="btn btn-success btn-block">
- <a class="btn btn-block btn-facebook btn-primary" href="http://dinero-web.heroku.com/dinero" >
+ <a class="btn btn-block btn-facebook btn-outline-primary" href="http://dinero-web.heroku.com/dinero" >
   <span class="fa fa-facebook" style="padding-right:15px;"></span>
         Sign In With Facebook
 
