--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -113,8 +113,9 @@
                 <td><b>Shipping:</b> {{x[2]}}$</td>
                  <td><div class="img-thumbnail"><img src={{x[4]}} height="120" width="120"></div></td>
                 <td><form method="post" action={{x[3]}}><p class="submit"><input type="submit" value="Buy" class="btn btn-primary btn-block" id={{x[0]}}></p></form></td>
+                <td><form method="post" action="http://dinero-web.heroku.com/favorites"><p class="submit"><input type="submit" value="Like This" class="btn btn-success btn-block"></p></form></td
                 <td><form method="post" action="http://dinero-web.heroku.com/favorites/delete/{{x[0]}}"><p class="submit"><input type="submit" value="Delete" class="btn btn-danger btn-block" id={{x[0]}} ></p></form></td>
-             	<td><form method="post" action="http://dinero-web.heroku.com/favorites"><p class="submit"><input type="submit" value="Like This" class="btn btn-info btn-block"></p></form></td
+             	
                 </tr>
         {% endfor %}
        </tbody>
@@ -128,24 +129,7 @@
            
     </section>
 
-    <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    </div>
-
+  
     <!-- jQuery -->
     <script src="../static/js/jquery.js"></script>
 
