--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -118,9 +118,9 @@
 <h5>Easy To Shop !</h5>
 
  <form method="post" action="http://dinero-web.heroku.com/dinero" style="display: inline;" >
-         <p style="padding-top: 20px" ><input class="form-control" type="text" name="add" value="" placeholder="Email"></p>
-
-<p><input class="form-control" type="password" name="add2" value="" placeholder="Password"></p>
+         <p style="padding-top: 20px" ><input class="form-control" type="text" name="email" value="" placeholder="Email"></p>
+<p><input class="form-control" type="password" name="password" value="" placeholder="Password"></p>
+</form>
 
      <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/dinero"><input type="submit" value="Sign-in " class="btn btn-success btn-block">
  <a class="btn btn-block btn-facebook btn-primary" href="http://dinero-web.heroku.com/dinero" >
