--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -120,7 +120,14 @@
  <form method="post" action="http://dinero-web.heroku.com/login" style="display: inline;" >
          <p style="padding-top: 20px" ><input class="form-control" type="text" name="email" value="" placeholder="Email"></p>
 <p><input class="form-control" type="password" name="password" value="" placeholder="Password"></p>
+ 
+ <button type="button" id="loginButton" data-loading-text="Loading..." class="btn btn-primary btn-block" autocomplete="off">
+  Login
+</button>
+
+ <!--
      <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/dinero"><input type="submit" value="Sign-in " class="btn btn-success btn-block">
+-->
 </form>
 
  <a class="btn btn-block btn-facebook btn-primary" href="http://dinero-web.heroku.com/dinero" >
@@ -215,6 +222,13 @@ function goBack() {
    }(document, 'script', 'facebook-jssdk'));
 </script>
 
+<script>
+  $('#loginButton').on('click', function () {
+    var $btn = $(this).button('loading')
+    // business logic...
+    $btn.button('reset')
+  })
+</script>
 
 </body>
 
