--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -121,7 +121,7 @@
          <p style="padding-top: 20px" ><input class="form-control" type="text" name="email" value="" placeholder="Email"></p>
 <p><input class="form-control" type="password" name="password" value="" placeholder="Password"></p>
  
- <button type="button" id="loginButton" data-loading-text="Loading..." class="btn btn-primary btn-block" autocomplete="off">
+ <button type="button" id="loginButton" data-loading-text="Loading..." class="btn btn-success btn-block" autocomplete="off">
   Login
 </button>
 
@@ -129,7 +129,7 @@
      <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/dinero"><input type="submit" value="Sign-in " class="btn btn-success btn-block">
 -->
 </form>
-
+<p></p>
  <a class="btn btn-block btn-facebook btn-primary" href="http://dinero-web.heroku.com/dinero" >
   <span class="fa fa-facebook-square" style="padding-right:15px;"></span>
         Facebook Login
