--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -117,11 +117,11 @@
 
 <h5>Easy To Shop !</h5>
 
- <form method="post" action="http://dinero-web.heroku.com/login" style="display: inline;" >
+ <form method="post" action="/login" style="display: inline;" >
          <p style="padding-top: 20px" ><input class="form-control" type="text" name="email" value="" placeholder="Email"></p>
 <p><input class="form-control" type="password" name="password" value="" placeholder="Password"></p>
  
- <button type="button" id="loginButton" data-loading-text="Loading..." class="btn btn-success btn-block" autocomplete="off">
+ <button type="submit" id="loginButton" data-loading-text="Loading..." class="btn btn-success btn-block" autocomplete="off">
   Login
 </button>
 
