--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -118,14 +118,13 @@
 <h5>Easy To Shop !</h5>
 
  <form method="post" action="/login" style="display: inline;">
-         <p style="padding-top: 20px"><input type="text" name="email" placeholder="Email"></p>
-<p><input type="password" name="password" placeholder="Password"></p>
- 
- <button id="loginButton" data-loading-text="Loading..." class="btn btn-success btn-block">Login</button>
-</form>
+         <p style="padding-top: 20px"><input class="form-control" type="text" name="email" placeholder="Email"></p>
+<p><input class="form-control" type="password" name="password" placeholder="Password"></p>
  <!--
-     <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/dinero"><input type="submit" value="Sign-in " class="btn btn-success btn-block">
--->
+ <button id="loginButton" data-loading-text="Loading..." class="btn btn-success btn-block">Login</button> -->
+ <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/login"><input type="submit" value="Sign-in " class="btn btn-success btn-block">
+</form>
+
 
 <p></p>
  <a class="btn btn-block btn-facebook btn-primary" href="http://dinero-web.heroku.com/dinero" >
