--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -133,7 +133,7 @@
 
 
 </a>
-<button type="button" class="btn btn-link">Sign-Up</button>
+<button type="button" class="btn btn-link" formaction="http://dinero-web.herokuapp.com/signup">Sign-Up</button>
       </p>
 
      </form>
