--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -122,7 +122,7 @@
 <p><input class="form-control" type="password" name="password" placeholder="Password"></p>
  <!--
  <button id="loginButton" data-loading-text="Loading..." class="btn btn-success btn-block">Login</button> -->
- <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/login"><input type="submit" value="Sign-in " class="btn btn-success btn-block">
+ <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/login"><input type="submit" value="Login" class="btn btn-success btn-block"></p>
 </form>
 
 
@@ -133,8 +133,13 @@
 
 
 </a>
+
+<p href="http://dinero-web.herokuapp.com/signup"><input type="submit" value="Sign-Up" class="btn btn-link"></p>
+
+<!--
 <button type="button" class="btn btn-link" formaction="http://dinero-web.herokuapp.com/signup">Sign-Up</button>
-      </p>
+    
+    -->
 
 
 
