--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -134,8 +134,9 @@
 
 </a>
 
+<form action="http://dinero-web.herokuapp.com/signup">
 <p href="http://dinero-web.herokuapp.com/signup"><input type="submit" value="Sign-Up" class="btn btn-link"></p>
-
+</form>
 <!--
 <button type="button" class="btn btn-link" formaction="http://dinero-web.herokuapp.com/signup">Sign-Up</button>
     
