--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -74,6 +74,9 @@
                     <li class="page-scroll">
                         <a href="http://dinero-web.heroku.com/my-space">My-Space</a>
                     </li>
+                                                        <li class="page-scroll">
+                        <a href="http://dinero-web.heroku.com/logout">Logout</a>
+                    </li>
                   
                 </ul>
             </div>
