--- a/templates/my-history.html
+++ b/templates/my-history.html
@@ -83,6 +83,9 @@
                                         <li class="page-scroll">
                         <a href="http://dinero-web.heroku.com/marketplace">Dinero Market Place</a>
                     </li>
+                                                        <li class="page-scroll">
+                        <a href="http://dinero-web.heroku.com/logout">Logout</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
