--- a/templates/my-history.html
+++ b/templates/my-history.html
@@ -113,10 +113,7 @@
       {% for x in list %}
                 <tr>
                 <td><big><b> <font color="#18bc9c">{{x[0]}}</font></big></td></b>
-                <td><b>Price:</b> {{x[1]}}$</td>
-                <td><b>Shipping:</b> {{x[2]}}$</td>
-                <td><div class="img-thumbnail"><img src={{x[4]}} height="120" width="120"></div></td>
-                <td><form method="post" action={{x[3]}}><p class="submit"><input type="submit" value="Buy" class="btn btn-primary btn-block" id={{x[0]}} ></p></form></td>
+                <td><form method="post" action="http://dinero-web.heroku.com/"><p class="submit"><input type="submit" value="Results" class="btn btn-primary btn-block" id={{x[0]}} ></p></form></td>
                 <td><form method="post" action="http://dinero-web.heroku.com/history/delete/{{x[0]}}"><p class="submit"><input type="submit" value="Delete" class="btn btn-danger btn-block" id={{x[0]}} ></p></form></td>
              
                 </tr>
