--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -116,6 +116,7 @@
                 <td><b>Shipping:</b> {{x[2]}}$</td>
                  <td><div class="img-thumbnail"><img src={{x[4]}} height="120" width="120"></div></td>
                 <td><form method="post" action={{x[3]}}><p class="submit"><input type="submit" value="Buy" class="btn btn-primary btn-block" id={{x[0]}}></p></form></td>
+                <td><form method="post" action={{x[3]}}><p class="submit"><input type="submit" value="Same Same" class="btn btn-success btn-block" id={{x[0]}}></p></form></td>
                 <td><form method="post" action="http://dinero-web.heroku.com/favorites/delete/{{x[0]}}"><p class="submit"><input type="submit" value="Delete" class="btn btn-danger btn-block" id={{x[0]}} ></p></form></td>
              	
                 </tr>
