--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -112,16 +112,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
+                	<p style="padding-top: 10px"></p>
                     <h2>My Dinero Space</h2>
                   <!--           <hr class="star-primary"> -->
 
 <div></div>
+<p style="padding-top: 30px"></p>
                         <a href="http://dinero-web.heroku.com/history">
                             <button action="/history" type="button" class="btn btn-success btn-lg btn-block">My History
                             <span class="glyphicon glyphicon-time" aria-hidden="true"></span></button>
                         </a>
 <p></p>
-
+<p style="padding-top: 10px"></p>
                         <a href="http://dinero-web.heroku.com/favorites">
                               <button action="/favorites" type="button" class="btn btn-success btn-lg btn-block">My Favorites
                             <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span></button>
