--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -116,6 +116,7 @@
                     <h2>My Dinero Space</h2>
                   <!--           <hr class="star-primary"> -->
 
+	<h3><b>Email: </b>{{email}}</h3>
 <div></div>
 <p style="padding-top: 300px"></p>
                         <a href="http://dinero-web.heroku.com/history">
