--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -116,7 +116,7 @@
                     <h2>My Dinero Space</h2>
                   <!--           <hr class="star-primary"> -->
 
-	<b>Email: </b>{{email}}
+	<p align="left"><b>Email: </b>{{email}}</p>
 <div></div>
 <p style="padding-top: 300px"></p>
                         <a href="http://dinero-web.heroku.com/history">
