--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -115,8 +115,8 @@
                 	<p style="padding-top: 10px"></p>
                     <h2>My Dinero Space</h2>
                   <!--           <hr class="star-primary"> -->
-
-	<p align="left"><b>Email: </b>{{email}}</p>
+	<p>This is your private space, here you can find - you history searches, you favorites items and more ...</p>
+	<p style="padding-top: 100px"><b>Email: </b>{{email}}</p>
 <div></div>
 <p style="padding-top: 300px"></p>
                         <a href="http://dinero-web.heroku.com/history">
