--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -127,7 +127,7 @@
 
 
 <p></p>
- <a class="btn btn-block btn-facebook btn-primary" href="http://dinero-web.heroku.com/dinero" >
+ <a class="btn btn-block btn-facebook btn-primary" href="http://dinero-web.heroku.com/facebook_login" >
   <span class="fa fa-facebook-square" style="padding-right:15px;"></span>
         Facebook Login
 
