--- a/templates/results.html
+++ b/templates/results.html
@@ -134,7 +134,7 @@
 		<td><div class="img-thumbnail"><img src={{x[4]}} height="120" width="120"></div></td>
     
 
-                <td><form action={{x[3]}} target="_blank"><input type="submit" value="Buy" target="_blank" class="btn btn-primary btn-block"></form></td>
+                <td><form action={{x[3]}} target="_blank"><input type="submit" value="Open in {{x[5]}}" target="_blank" class="btn btn-primary btn-block"></form></td>
                 <td><form action="http://dinero-web.heroku.com/results/add_to_favorites/{{x[0]}}"><input type="submit" value="Like" class="btn btn-success btn-block"></form></td>
             </tr>
         {% endfor %}
