--- a/templates/index.html
+++ b/templates/index.html
@@ -159,7 +159,12 @@
 -->
     <p style="padding-top: 10px"></p>
   <!-- <button style="width: 300px; height: 65px; display: inline-block;" type="submit" id="searchButton" autocomplete="off" data-loading-text="Loading..." class="btn btn-success btn-block after-box">Search Now</button> -->
+<!--
 <button style="width: 300px; height: 65px; display: inline-block;" type="submit" class="btn btn-success btn-lg" id="load" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading ...">Search Now</button>
+-->
+<div style="margin:3em;">
+<button type="button" class="btn btn-primary btn-lg" id="load" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Search Now</button>
+</div>
 </form>
 
 
@@ -236,6 +241,15 @@ function goBack() {
   })
 </script>
 
+<script>
+	$('.btn').on('click', function() {
+    var $this = $(this);
+  $this.button('loading');
+    setTimeout(function() {
+       $this.button('reset');
+   }, 8000);
+});
+</script>
 
 
 </body>
