--- a/templates/index.html
+++ b/templates/index.html
@@ -163,7 +163,7 @@
 <button style="width: 300px; height: 65px; display: inline-block;" type="submit" class="btn btn-success btn-lg" id="load" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading ...">Search Now</button>
 -->
 <div style="margin:3em;">
-<button type="submit" style="width: 300px; height: 65px; display: inline-block;" class="btn btn-success btn-lg" id="load" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Search Now</button>
+<button type="submit" style="width: 300px; height: 65px; display: inline-block;text-align:center" class="btn btn-success btn-lg" id="load" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Loading...">Search Now</button>
 </div>
 </form>
 
