--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <style>
 body {margin:0;}
 
-.icon-bar {
+.icon_bar {
 	position: fixed;
    
 	bottom: 0;
@@ -18,7 +18,7 @@ body {margin:0;}
     overflow: auto;
 }
 
-.icon-bar a {
+.icon_bar a {
     width: 20%;
     padding: 12px 0;
     float: left;
@@ -27,7 +27,7 @@ body {margin:0;}
     font-size: 36px;
 }
 
-.icon-bar a:hover {
+.icon_bar a:hover {
     background-color: #000;
 }
 
@@ -100,7 +100,7 @@ body {margin:0;}
 
 <body id="page-top" class="index">
 
-<div class="icon-bar">
+<div class="icon_bar">
   <a class="active" href="http://dinero-web.herokuapp.com/dinero"><i class="fa fa-search"></i></a>
   <a href="http://dinero-web.herokuapp.com/my-space"><i class="fa fa-home"></i></a>
   <a href="http://dinero-web.herokuapp.com/favorites"><i class="fa fa-heart"></i></a>
