--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -29,6 +29,32 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+<style>
+body {margin:0;}
+.icon_bar {
+	position: fixed;
+   
+	bottom: 0;
+	width: 100%;
+    text-align: center;
+    background-color: #233140;
+    overflow: auto;
+}
+.icon_bar a {
+    width: 20%;
+    padding: 12px 0;
+    float: left;
+    transition: all 0.3s ease;
+    color: white;
+    font-size: 36px;
+}
+.icon_bar a:hover {
+    background-color: #000;
+}
+.active {
+    background-color: #18BC9C !important;
+}
+</style>
 
            <style>
 
@@ -47,7 +73,13 @@
 </head>
 
 <body id="page-top" class="index">
-
+<div class="icon_bar">
+  <a  href="http://dinero-web.herokuapp.com/dinero"><i class="fa fa-search"></i></a>
+  <a class="active" href="http://dinero-web.herokuapp.com/my-space"><i class="fa fa-home"></i></a>
+  <a href="http://dinero-web.herokuapp.com/favorites"><i class="fa fa-heart"></i></a>
+  <a href="http://dinero-web.herokuapp.com/history"><i class="fa fa-history"></i></a>
+  <a href="http://dinero-web.herokuapp.com/marketplace"><i class="fa fa-users"></i></a>
+</div>
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
