--- a/templates/results.html
+++ b/templates/results.html
@@ -40,12 +40,12 @@
 body {margin:0;}
 .icon_bar {
 	position: fixed;
-   
 	bottom: 0;
 	width: 100%;
     text-align: center;
     background-color: #233140;
     overflow: auto;
+    z-index: 99999;
 }
 .icon_bar a {
     width: 20%;
