--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -39,6 +39,7 @@ body {margin:0;}
     text-align: center;
     background-color: #233140;
     overflow: auto;
+    z-index: 99999;
 }
 .icon_bar a {
     width: 20%;
