--- a/templates/my-history.html
+++ b/templates/my-history.html
@@ -54,6 +54,14 @@
 
 <body id="page-top" class="index">
 
+<div class="icon_bar">
+  <a  href="http://dinero-web.herokuapp.com/dinero"><i class="fa fa-search"></i></a>
+  <a href="http://dinero-web.herokuapp.com/my-space"><i class="fa fa-home"></i></a>
+  <a href="http://dinero-web.herokuapp.com/favorites"><i class="fa fa-heart"></i></a>
+  <a class="active" href="http://dinero-web.herokuapp.com/history"><i class="fa fa-history"></i></a>
+  <a href="http://dinero-web.herokuapp.com/marketplace"><i class="fa fa-users"></i></a>
+</div>
+
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
