--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -147,7 +147,7 @@ body {margin:0;}
              <tr>
                 <td><big><b> <font color="#18bc9c">{{x[0]}}</font></big></td></b>
                 <td><b>Price:</b> {{x[1]}}$</td>
-                <td><b>Shipping:</b> {{x[2]}}$</td>
+                <!-- <td><b>Shipping:</b> {{x[2]}}$</td> -->
                  <td><div class="img-thumbnail"><img src={{x[4]}} height="120" width="120"></div></td>
                 <td><form method="post" action={{x[3]}}><p class="submit"><input type="submit" value="Open in {{x[5]}}" class="btn btn-primary btn-block" id={{x[0]}}></p></form></td>
                 <td><form method="post" action={{x[3]}}><p class="submit"><input type="submit" value="Same Same" class="btn btn-success btn-block" id={{x[0]}}></p></form></td>
