--- a/templates/results.html
+++ b/templates/results.html
@@ -168,9 +168,11 @@ body {margin:0;}
   <!--  <td><div class="img-thumbnail"><img src={{x[4]}} id="myImg" height="120" width="120"></div></td> -->
 		<!-- <td><div class="img-thumbnail"><img src={{x[4]}} height="120" width="120"></div></td> -->
                 <td><p>
+                <div class="img-thumbnail">
 		<a href={{x[3]}}>
 		<img border="0" alt="ItemPic" src={{x[4]}} width="120" height="120">
 		</a>
+		</div>
 		</p></td>
     
 
