--- a/templates/my-favorites.html
+++ b/templates/my-favorites.html
@@ -150,9 +150,11 @@ body {margin:0;}
                 <td><b>Shipping:</b> {{x[2]}}$</td>
                 <!-- <td><div class="img-thumbnail"><img src={{x[4]}} height="120" width="120"></div></td> -->
                 <td><p>
+                <div class="img-thumbnail">
 		<a href={{x[3]}}>
 		<img border="0" alt="ItemPic" src={{x[4]}} width="120" height="120">
 		</a>
+		</div>
 		</p></td>
                 <td><form method="post" action={{x[3]}}><p class="submit"><input type="submit" value="Open in {{x[5]}}" class="btn btn-primary btn-block" id={{x[0]}}></p></form></td>
                 <td><form method="post" action={{x[3]}}><p class="submit"><input type="submit" value="Same Same" class="btn btn-success btn-block" id={{x[0]}}></p></form></td>
