--- a/templates/results.html
+++ b/templates/results.html
@@ -163,8 +163,8 @@ body {margin:0;}
       </td> -->
       
       <td>
-      	<form action=http://dinero-web.heroku.com/results/freeshipping ><input type="submit" value="Free Shipping Only" target="_blank" class="btn btn-primary btn-block">
-      	<form action=http://dinero-web.heroku.com/results/cheap ><input type="submit" value="Sort By Low-Cost" target="_blank" class="btn btn-primary btn-block">
+      	<form action=http://dinero-web.heroku.com/results/freeshipping ><input type="submit" value="Free Shipping Only" class="btn btn-default btn-block">
+      	<form action=http://dinero-web.heroku.com/results/cheap ><input type="submit" value="Sort By Low-Cost" class="btn btn-default btn-block">
       </td>
       {% for x in list %}
 
