--- a/templates/results.html
+++ b/templates/results.html
@@ -164,9 +164,9 @@ body {margin:0;}
       
       <tr>
       	<center>
-      <td><form action=http://dinero-web.heroku.com/results/freeshipping ><input style="height: 70px; width:70px;" type="submit" value="Free Shipping" class="btn btn-outline-primary"></form></td>
-      	<td><form action=http://dinero-web.heroku.com/results/cheap ><input style="height: 70px; width:70px;" type="submit" value="Low-Cost" class="btn btn-outline-primary"></form></td>
-      	<td><form action=http://dinero-web.heroku.com/results ><input style="height: 70px; width:70px;" type="submit" value="All Listings" class="btn btn-outline-primary"></form></td>
+      <td><form action=http://dinero-web.heroku.com/results/freeshipping ><input style="height: 70px; width:140px;" type="submit" value="Free Shipping" class="btn btn-warning"></form></td>
+      	<td><form action=http://dinero-web.heroku.com/results/cheap ><input style="height: 70px; width:140px;" type="submit" value="Low-Cost" class="btn btn-warning"></form></td>
+      	<td><form action=http://dinero-web.heroku.com/results ><input style="height: 70px; width:140px;" type="submit" value="All Listings" class="btn btn-warning"></form></td>
       </center>
       </tr>
       {% for x in list %}
