--- a/templates/results.html
+++ b/templates/results.html
@@ -163,11 +163,13 @@ body {margin:0;}
       </td> -->
       
       <tr>
+      	<div align="center">
       	<center>
       <td><form action=http://dinero-web.heroku.com/results/freeshipping ><input style="height: 70px; width:140px;" type="submit" value="Free Shipping" class="btn btn-warning"></form></td>
       	<td><form action=http://dinero-web.heroku.com/results/cheap ><input style="height: 70px; width:140px;" type="submit" value="Low-Cost" class="btn btn-warning"></form></td>
       	<td><form action=http://dinero-web.heroku.com/results ><input style="height: 70px; width:140px;" type="submit" value="All Listings" class="btn btn-warning"></form></td>
       </center>
+      </div>
       </tr>
       {% for x in list %}
 
