--- a/templates/results.html
+++ b/templates/results.html
@@ -164,9 +164,9 @@ body {margin:0;}
       
       <tr>
       	<td>
-      <form action=http://dinero-web.heroku.com/results/freeshipping ><input type="submit" value="Free Shipping" class="btn btn-warning btn-block"></form>
-      <form action=http://dinero-web.heroku.com/results/cheap ><input type="submit" value="Low-Cost" class="btn btn-warning btn-block"></form>
-      <form action=http://dinero-web.heroku.com/results ><input type="submit" value="All Listings" class="btn btn-warning btn-block"></form>
+      <form action=http://dinero-web.heroku.com/results/freeshipping ><input style="height: 60px; width: 140px;" type="submit" value="Free Shipping" class="btn btn-warning btn-block"></form>
+      <form action=http://dinero-web.heroku.com/results/cheap ><input style="height: 60px; width: 140px;" type="submit" value="Low-Cost" class="btn btn-warning btn-block"></form>
+      <form action=http://dinero-web.heroku.com/results ><input style="height: 60px; width: 140px;" type="submit" value="All Listings" class="btn btn-warning btn-block"></form>
       </td>
       </tr>
       {% for x in list %}
