--- a/templates/results.html
+++ b/templates/results.html
@@ -163,11 +163,11 @@ body {margin:0;}
       </td> -->
       
 
-      	<td>
-      <form action=http://dinero-web.heroku.com/results/freeshipping ><input  type="submit" value="Free Shipping" class="btn btn-outline-success btn-block"></form>
-      <form action=http://dinero-web.heroku.com/results/cheap ><input  type="submit" value="Low-Cost" class="btn btn-outline-success btn-block"></form>
-      <form action=http://dinero-web.heroku.com/results ><input type="submit" value="All Listings" class="btn btn-outline-success btn-block"></form>
-      </td>
+      <tr>
+  <td> <form action=http://dinero-web.heroku.com/results/freeshipping ><input  type="submit" value="Free Shipping" class="btn btn-outline-success btn-block"></form></td>
+     <td> <form action=http://dinero-web.heroku.com/results/cheap ><input  type="submit" value="Low-Cost" class="btn btn-outline-success btn-block"></form></td>
+     <td> <form action=http://dinero-web.heroku.com/results ><input type="submit" value="All Listings" class="btn btn-outline-success btn-block"></form></td>
+</tr>
 
       {% for x in list %}
 
