--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -131,11 +131,7 @@
 
 <p></p>
 
-<span class="line-thru" ng-bind="::'FORMS.OR'|translate">
-::before
-"or"
-::after
-</span>
+<img src="../static/img/or.jpg">
  
  <a class="btn btn-block btn-facebook btn-primary" href="http://dinero-web.heroku.com/facebook_login" >
   <span class="fa fa-facebook-square" style="padding-right:15px;"></span>
