--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -133,7 +133,7 @@
 
 <img src="../static/img/or.jpg">
  
- <a class="btn btn-block btn-facebook btn-primary" href="http://dinero-web.heroku.com/facebook_login" >
+ <a class="btn btn-block btn-facebook facebook-color" href="http://dinero-web.heroku.com/facebook_login" >
   <span class="fa fa-facebook-square" style="padding-right:15px;"></span>
         Facebook Login
 
