--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -3129,6 +3129,12 @@ fieldset[disabled] .btn-default.active {
   background-color: #2c3e50;
   border-color: #2c3e50;
 }
+.btn-primary-face {
+	color: #ffffff;
+	background-color:#3B5998;
+	border-color:#3B5998;
+}
+
 .btn-primary:focus,
 .btn-primary.focus {
   color: #ffffff;
@@ -7095,9 +7101,6 @@ div#content {
 	z-index:1;
 }
 
-.facebook-color {
-	background-color:#3B5998;
-	border-color:#3B5998;
-}
+
 
 
