--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -122,7 +122,7 @@
 <p><input class="form-control" type="password" name="password" placeholder="Password"></p>
  <!--
  <button id="loginButton" data-loading-text="Loading..." class="btn btn-success btn-block">Login</button> -->
- <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/login"><input type="submit" value="Login" class="btn btn-success btn-block"></p>
+ <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/login"><input type="submit" value="Login" class="btn btn-success btn-block btn-lg"></p>
 </form>
 
 <form action="http://dinero-web.herokuapp.com/signup">
@@ -133,7 +133,7 @@
 
 <img src="../static/img/or.jpg">
  
- <a class="btn btn-block btn-facebook btn-primary-face" href="http://dinero-web.heroku.com/facebook_login" >
+ <a style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" href="http://dinero-web.heroku.com/facebook_login" >
   <span class="fa fa-facebook-square" style="padding-right:15px;"></span>
         Facebook Login
 
