--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -122,20 +122,20 @@
 <p><input class="form-control" type="password" name="password" placeholder="Password"></p>
  <!--
  <button id="loginButton" data-loading-text="Loading..." class="btn btn-success btn-block">Login</button> -->
- <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/login"><input type="submit" value="Login" class="btn btn-success btn-block btn-lg"></p>
+ <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/login"><input type="submit" value="Sign-In" class="btn btn-success btn-block btn-lg"></p>
 </form>
 
 <form action="http://dinero-web.herokuapp.com/signup">
 <p href="http://dinero-web.herokuapp.com/signup"><input type="submit" value="Don't have an account? Sign-Up" class="btn btn-link"></p>
 </form>
 
-<p></p>
+<p style="padding-top: 30px"></p>
 
 <img src="../static/img/or.jpg">
- 
+ <p></p>
  <a style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" href="http://dinero-web.heroku.com/facebook_login" >
   <span class="fa fa-facebook-square" style="padding-right:15px;"></span>
-        Facebook Login
+        Sign-In with Facebook
 
 
 </a>
