--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -134,7 +134,7 @@
 <img src="../static/img/or.jpg">
  <p></p>
  <a style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" href="http://dinero-web.heroku.com/facebook_login" >
-  <span class="fa fa-facebook-square" style="padding-right:15px;"></span>
+  <span class="fa fa-facebook" style="padding-right:15px;"></span>
         Sign-In with Facebook
 
 
@@ -171,14 +171,14 @@ function goBack() {
 }
 </script>
 
-
+<!--
     <div class="scroll-top page-scroll visible-xs visible-sm">
         <a class="btn btn-primary" onclick="goBack()">
             <i class="fa fa-chevron-left"></i>
         </a>
     </div>
 </div>
-
+-->
     <!-- jQuery -->
     <script src="../static/js/jquery.js"></script>
 
