--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -133,8 +133,8 @@
 
 <img src="../static/img/or.jpg">
  <p></p>
- <a style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-block btn-facebook btn-primary btn-lg" href="http://dinero-web.heroku.com/facebook_login" >
-  <span class="fa fa-facebook" style="padding-right:15px;"></span>
+ <a style="background-color:#3B5998; border-color:#3B5998;" class="btn btn-social btn-block btn-facebook btn-primary btn-lg" href="http://dinero-web.heroku.com/facebook_login" >
+  <span class="fa fa-facebook-square" style="padding-right:15px;"></span>
         Sign-In with Facebook
 
 
