--- a/templates/dinero-login.html
+++ b/templates/dinero-login.html
@@ -117,9 +117,9 @@
 
 <h5>Easy To Shop !</h5>
 
- <form method="post" action="/login" style="display: inline;">
-         <p style="padding-top: 20px"><input class="form-control" type="text" name="email" placeholder="Email"></p>
-<p><input class="form-control" type="password" name="password" placeholder="Password"></p>
+ <form method="post" action="/login" style="display: inline;" autocomplete="off">
+         <p style="padding-top: 20px"><input class="form-control" type="text" name="email" placeholder="Email" autocomplete="off"></p>
+<p><input class="form-control" type="password" name="password" placeholder="Password" autocomplete="off"></p>
  <!--
  <button id="loginButton" data-loading-text="Loading..." class="btn btn-success btn-block">Login</button> -->
  <p style="padding-top: 40px" class="submit" style="width: 200px; height: 65px; display: inline-block;" href="http://dinero-web.heroku.com/login"><input type="submit" value="Sign-In" class="btn btn-success btn-block btn-lg"></p>
