--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -148,7 +148,7 @@ body {margin:0;}
                 	<p style="padding-top: 10px"></p>
                     <h2>My Dinero Space</h2>
                   <!--           <hr class="star-primary"> -->
-                  <p><b>Email: </b>{{email}}</p>
+                  <p><b>Hello, </b>{{username}}</p>
      
 	
 <div></div>
