--- a/templates/my-space.html
+++ b/templates/my-space.html
@@ -152,19 +152,8 @@ body {margin:0;}
      
 	
 <div></div>
-<p style="padding-top: 150px"></p>
-                        <a href="http://dinero-web.heroku.com/history">
-                            <button action="/history" type="button" class="btn btn-success btn-lg btn-block">My History
-                            <span class="glyphicon glyphicon-time" aria-hidden="true"></span></button>
-                        </a>
-<p></p>
-<p style="padding-top: 5px"></p>
-                        <a href="http://dinero-web.heroku.com/favorites">
-                              <button action="/favorites" type="button" class="btn btn-success btn-lg btn-block">My Favorites
-                            <span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span></button>
-                        </a>
-
-                </div>
+<h3>Here you will build you virtual store for free ! </h3>
+<h4>Coming Soon !</h4>
             </div>
           
 		  
